--- a/Dockerfile-hwapp
+++ b/Dockerfile-hwapp
@@ -10,9 +10,5 @@ COPY . /app
 # Install any needed packages specified in requirements.txt
 RUN pip install -r requirements.txt
 
-# Make port 80 available to the world outside this container
-# (Only if your application exposes a port)
-EXPOSE 80
-
-# Command to start your application (modify this based on your application)
-CMD ["python", "-u", "TemperatureControlUnit/TemperatureControlUnit.py"]
+# Command to start hwunit application 
+CMD ["python", "-u", "TemperatureHardwareUnit/TemperatureHardwareUnit.py"]
